[FIX] scrollbar, hero section and footer

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -179,3 +179,17 @@
     @apply bg-background text-foreground;
   }
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  scrollbar-width: none;
+}
+
+body {
+  -ms-overflow-style: none;
+  overflow-y: scroll;
+}
+
